--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   update-news:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # ✅ 이 줄도 꼭 있어야 git push 가능
+
     steps:
       - uses: actions/checkout@v3
 
@@ -17,17 +20,17 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: pip install feedparser google-generativeai
+        run: pip install feedparser
 
       - name: Run update script
-        env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: python update_news.py
 
       - name: Commit and push
         run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add data/news.json
-          git commit -m "Auto-update news summary"
+          git commit -m "Auto-update news summary" || echo "No changes"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
