--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,9 +1,10 @@
 name: Update RSS Articles
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: '0 2 * * *'
+    - cron: '0 0 * * *'  # 매일 오전 9시 (KST 기준)
+  workflow_dispatch:     # 수동 실행도 가능
+
 
 jobs:
   build:
